refactor os client

--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,12 +1,12 @@
 # Adds namespace to all resources.
-namespace: openstack-loadbalancer-operator-system
+namespace: metallb-neutron-sync-system
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
 # "wordpress" becomes "alices-wordpress".
 # Note that it should also match with the prefix (text before '-') of the namespace
 # field above.
-namePrefix: openstack-loadbalancer-operator-
+namePrefix: metallb-neutron-sync-
 
 # Labels to add to all resources and selectors.
 #labels:
