--- a/config/rbac/openstackloadbalanceservice_viewer_role.yaml
+++ b/config/rbac/openstackloadbalanceservice_viewer_role.yaml
@@ -1,4 +1,4 @@
-# This rule is not used by the project openstack-loadbalancer-operator itself.
+# This rule is not used by the project metallb-neutron-sync itself.
 # It is provided to allow the cluster admin to help manage permissions for users.
 #
 # Grants read-only access to openstack.example.com resources.
@@ -9,7 +9,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   labels:
-    app.kubernetes.io/name: openstack-loadbalancer-operator
+    app.kubernetes.io/name: metallb-neutron-sync
     app.kubernetes.io/managed-by: kustomize
   name: openstackloadbalanceservice-viewer-role
 rules:
