--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -1,11 +1,34 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  labels:
-    app.kubernetes.io/name: openstack-loadbalancer-operator
-    app.kubernetes.io/managed-by: kustomize
   name: manager-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "list", "watch"]
+- apiGroups:
+  - metallb.io
+  resources:
+  - bgpadvertisements
+  - ipaddresspools
+  - l2advertisements
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - openstack.example.com
+  resources:
+  - openstackloadbalanceservices
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - openstack.example.com
+  resources:
+  - openstackloadbalanceservices/status
+  verbs:
+  - get
+  - patch
+  - update
